--- a/network-test.csproj
+++ b/network-test.csproj
@@ -4,7 +4,10 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
-    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="pamella" Version="1.7.0" />
+  </ItemGroup>
 
 </Project>
